Add HW keys overlay
Conflicts:
	overlay/frameworks/base/core/res/res/values/config.xml

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -246,4 +246,8 @@
     <bool name="config_sf_slowBlur">true</bool>
 
     <bool name="config_ui_enableFadingMarquee">true</bool>
+
+    <!-- Boolean to show HW keys enable/disbale option -->
+    <bool name="config_hwKeysPref">true</bool>
+
 </resources>
